feat:add codechef

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=CodeTracker
+server.port=8080
 server.error.whitelabel.enabled=false
 leetcode.api.url=https://leetcode.com/graphql
 codechef.base.url=https://codechef.com
