feat: add codeforces

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8080
 server.error.whitelabel.enabled=false
 leetcode.api.url=https://leetcode.com/graphql
 codechef.base.url=https://codechef.com
+codeforces.api.url=https://codeforces.com/api
+codeforces.api.key=34d1edcf8308a7190c23a063b56018ef8927cc5c
+codeforces.api.secret=c8f5debbfbbe8d18dd29d54ba9fead1e4803290b
